--- a/app/index.htm
+++ b/app/index.htm
@@ -22,7 +22,7 @@
         </nav>
         <form class="recherche">
           <label for="txtRecherche">
-            <input type="text" id="txtRecherche" />
+            <input type="text" id="txtRecherche" placeholder="Rechercher"/>
             <img
               src="https://s2.svgbox.net/materialui.svg?ic=search&color=000"
               width="32"
@@ -30,14 +30,16 @@
             />
           </label>
         </form>
-        <label class="burger" for="chkBurger">
-          <img
-            src="https://s2.svgbox.net/hero-solid.svg?ic=menu&color=000"
-            width="32"
-            height="32"
-          />
-        </label>
-        <input type="checkbox" name="" id="chkBurger" />
+        <div class="burgerBox">
+          <label class="burger" for="chkBurger">
+            <img
+              src="https://s2.svgbox.net/hero-solid.svg?ic=menu&color=000"
+              width="32"
+              height="32"
+            />
+          </label>
+          <input type="checkbox" name="" id="chkBurger" />
+        </div>
       </div>
     </section>
     <!-- //////////////////////////////////////  Accueil -->
