test premier push branche fp_tableau

--- a/app/index.htm
+++ b/app/index.htm
@@ -57,13 +57,13 @@
     </section>
     <!-- ////////////////////////////////////////  Tableau -->
     <section id="tableau">
-      <h1>Tableau</h1>
+      <h1>GIT </h1>
       <!-- table>(tr>(td>lorem2)*3)*4 -->
       <table>
         <tr>
-          <td>Lorem, ipsum.</td>
-          <td>Dolorem, accusantium?</td>
-          <td>Dignissimos, expedita.</td>
+          <th>Commande Git</th>
+          <th></th>
+          <th></th>
         </tr>
         <tr>
           <td>Lorem, ipsum.</td>
