premier push test

--- a/app/index.htm
+++ b/app/index.htm
@@ -62,23 +62,21 @@
       <table>
         <tr>
           <th>Commande Git</th>
-          <th></th>
-          <th></th>
-        </tr>
-        <tr>
           <td>Lorem, ipsum.</td>
           <td>Ullam, autem?</td>
           <td>Recusandae, suscipit.</td>
         </tr>
         <tr>
+          <th>Suffixe possible</th>
+          <td>Lorem, ipsum.</td>
+          <td>Ullam, autem?</td>
+          <td>Recusandae, suscipit.</td>
+        </tr>
+        <tr>
+          <th>Utilité</th>
           <td>Lorem, ipsum.</td>
           <td>Dolorem, repudiandae.</td>
           <td>Voluptas, architecto!</td>
-        </tr>
-        <tr>
-          <td>Lorem, ipsum.</td>
-          <td>Similique, at.</td>
-          <td>Enim, neque?</td>
         </tr>
       </table>
     </section>
