--- a/app/index.htm
+++ b/app/index.htm
@@ -85,6 +85,10 @@
     <!-- ////////////////////////////////////////  video -->
     <section id="video">
       <h1>Video</h1>
+      <div class="videoWrapper">
+        <!-- Copy & Pasted from YouTube -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RGOj5yH7evk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
     </section>
     <!-- ////////////////////////////////////////  Pied de page -->
     <section id="pied-page">
