--- a/app/index.htm
+++ b/app/index.htm
@@ -57,26 +57,26 @@
     </section>
     <!-- ////////////////////////////////////////  Tableau -->
     <section id="tableau">
-      <h1>GIT </h1>
+      <h1 class="tableau__titre">GIT </h1>
       <!-- table>(tr>(td>lorem2)*3)*4 -->
-      <table>
+      <table class="tableau">
         <tr>
           <th>Commande Git</th>
-          <td>Lorem, ipsum.</td>
-          <td>Ullam, autem?</td>
-          <td>Recusandae, suscipit.</td>
+          <td>git checkout</td>
+          <td>git log</td>
+          <td>git commit</td>
         </tr>
         <tr>
           <th>Suffixe possible</th>
-          <td>Lorem, ipsum.</td>
-          <td>Ullam, autem?</td>
-          <td>Recusandae, suscipit.</td>
+          <td> " -b "</td>
+          <td> "--oneline"</td>
+          <td> " - m " </td>
         </tr>
         <tr>
           <th>Utilité</th>
-          <td>Lorem, ipsum.</td>
-          <td>Dolorem, repudiandae.</td>
-          <td>Voluptas, architecto!</td>
+          <td>Crée une nouvelle branche vous y déplace.</td>
+          <td>Permet de visionner une liste des commits qui ont été faits</td>
+          <td>Sert à créer un commit et y attribuer un commit</td>
         </tr>
       </table>
     </section>
