--- a/app/index.htm
+++ b/app/index.htm
@@ -31,11 +31,7 @@
           </label>
           <div class="burgerBox">
             <label class="burger" for="chkBurger">
-              <img
-                src="https://s2.svgbox.net/hero-solid.svg?ic=menu&color=000"
-                width="32"
-                height="32"
-              />
+              <img src="https://s2.svgbox.net/hero-solid.svg?ic=menu&color=000" width="32" height="32"/>
             </label>
             <input type="checkbox" name="" id="chkBurger" />
           </div>
