--- a/app/index.htm
+++ b/app/index.htm
@@ -50,6 +50,26 @@
     <!-- //////////////////////////////////////  Galerie -->
     <section id="galerie">
       <h1>Galerie</h1>
+      <div class="grid">
+        <picture>
+          <img src="img/img1.jpeg" alt="">
+        </picture>
+        <picture>
+          <img src="img/img2.jpeg" alt="">
+        </picture>
+        <picture>
+          <img src="img/img3.png" alt="">
+        </picture>
+        <picture>
+          <img src="img/img4.webp" alt="">
+        </picture>
+        <picture>
+          <img src="img/img5.webp" alt="">
+        </picture>
+        <picture>
+          <img src="img/img6.png" alt="">
+        </picture>
+      </div>
     </section>
     <!-- ////////////////////////////////////////  Tableau -->
     <section id="tableau">
