pousser une image

--- a/app/index.htm
+++ b/app/index.htm
@@ -41,7 +41,16 @@
     </section>
     <!-- //////////////////////////////////////  Accueil -->
     <section id="accueil">
-      <h1>Accueil</h1>
+      <header class="primary-header">
+        <!-- <img src="./img/git-pic.webp" alt=""> -->
+        <div class="primary-header__text">
+          <h1>Accueil</h1>
+          <p>Exercice formatif sur github</p>
+        </div>
+        
+      </header>
+      
+
     </section>
     <!-- //////////////////////////////////////  Inscription -->
     <section id="inscription">
